2016-06-11  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* improved ChaCha20-Poly1305 Cipher Suites support

2015-10-09  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* minor bugfix

2015-10-07  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* minor bugfix
	* added support for some old cipher suites

2015-10-06  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* fixed some threads-related bugs

2015-10-05  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* fixed some bugs

2015-10-04  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* added support for elliptic_curves and ec_point_formats TLS Extensions

2015-10-03  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* reorganized ClientHello generation procedure
	* added support for server_name TLS Extension
	* added ChaCha Cipher Suites support

2015-09-26  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* basic multi-thread support (enabled by default)
	* fixed nasty memory bug

2015-09-20  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* SSL3 support
	* TLS1.3 (draft) support
	* improved CS loading function
	* corrected TLS_EMPTY_RENEGOTIATION_INFO_SCSV and TLS_FALLBACK_SCSV handling

2015-09-13  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* Fixed cs_eval.dat
	
2015-09-13  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* Changed color codes
	* Quiet mode
	* Updated README

2015-09-12  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* Updated cs_eval.dat with one generated with last openssl version
	* Added unknown security category
	
2015-09-12  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* Added Cipher Suite Strength Evaluation with color feedback	
	* Fixed TIME_WAIT issue
	* Performed some code cleanup

2015-09-10  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* Added right AC_CHECK_HEADERS in configure.ac
	* Added server mode
	* Added TODO file

2015-09-06  Marco Bellaccini <marco.bellaccini[at!]gmail.com>

	* Fixed Makefile.am
