@@ -11,8 +11,8 @@ tlsprobe builds TLS/SSL messages in a "byte-by-byte" fashion and so does not nee
 The program supports both single Cipher Suite support check and a full-scan mode (in which it checks for support of all the cipher suites listed in the IANA TLS Cipher Suite Registry - http://www.iana.org/assignments/tls-parameters/tls-parameters.xhtml#tls-parameters-4 ).
 In server mode, it waits for a ClientHello to arrive and parse it, discovering offered Cipher Suites.
 
-tlsprobe provides you with a visual feedback of the security level of the various TLS/SSL Cipher Suites, based on Mozilla Server-Side-TLS Recommendations: https://wiki.mozilla.org/Security/Server_Side_TLS .
-It highlights the discovered Cipher Suites with different colors, depending on the estimated security level.
+tlsprobe provides you with a visual feedback of the security/compatibility level of the various TLS/SSL Cipher Suites, based on Mozilla Server-Side-TLS Recommendations: https://wiki.mozilla.org/Security/Server_Side_TLS .
+It highlights the discovered Cipher Suites with different colors, depending on the estimated security and compatibility level.
 
 Working at TLS/SSL level, tlsprobe is generic and also supports probing non-https services (you just have to specify the right port for the higher-level protocol with the -p option).
 
