@@ -1,114 +1,62 @@
-#Mozilla recommended configurations for web servers (taken on 12 Sept 2015)
+#Adapted from Mozilla recommended configurations for web servers (as on 11 Jun 2016)
 #Interesting links:
 #https://wiki.mozilla.org/Security/Server_Side_TLS
 #https://mozilla.github.io/server-side-tls/ssl-config-generator/
 #
-#used openssl 1.0.2d and "openssl ciphers -V 'CIPHER-SUITE-CONFIG' | cut -c 11-19" to get these lists
-#used ALL and eNULL for all, plus 0x00,0x00
-#where CIPHER-SUITE-CONFIG is the proposed openssl Ciphersuite config
-#ChaCha suites have been added and considered "modern"
 
 <modern>
 0xC0,0x2F
 0xC0,0x2B
 0xC0,0x30
 0xC0,0x2C
-0x00,0x9E
-0x00,0xA2
-0x00,0xA3
-0x00,0x9F
 0xC0,0x27
 0xC0,0x23
-0xC0,0x13
-0xC0,0x09
 0xC0,0x28
 0xC0,0x24
-0xC0,0x14
-0xC0,0x0A
-0x00,0x67
-0x00,0x33
-0x00,0x40
-0x00,0x6B
-0x00,0x38
-0x00,0x39
 0xCC,0x13
 0xCC,0x14
-0xCC,0x15
 0xCC,0xA8
 0xCC,0xA9
 </modern>
 
 <intermediate>
-0xC0,0x2F
+0xCC,0xA8
+0xCC,0xA9
+0xCC,0x14
+0xCC,0x13
 0xC0,0x2B
-0xC0,0x30
+0xC0,0x2F
 0xC0,0x2C
+0xC0,0x30
 0x00,0x9E
-0x00,0xA2
-0x00,0xA3
 0x00,0x9F
-0xC0,0x27
 0xC0,0x23
-0xC0,0x13
+0xC0,0x27
 0xC0,0x09
 0xC0,0x28
+0xC0,0x13
 0xC0,0x24
-0xC0,0x14
 0xC0,0x0A
+0xC0,0x14
 0x00,0x67
 0x00,0x33
-0x00,0x40
 0x00,0x6B
-0x00,0x38
 0x00,0x39
-0xC0,0x12
 0xC0,0x08
+0xC0,0x12
+0x00,0x16
 0x00,0x9C
 0x00,0x9D
 0x00,0x3C
 0x00,0x3D
 0x00,0x2F
 0x00,0x35
-0xC0,0x22
-0xC0,0x21
-0xC0,0x20
-0x00,0xA5
-0x00,0xA1
-0x00,0x6A
-0x00,0x69
-0x00,0x68
-0x00,0x37
-0x00,0x36
-0xC0,0x1F
-0xC0,0x1E
-0xC0,0x1D
-0x00,0xA4
-0x00,0xA0
-0x00,0x3F
-0x00,0x3E
-0x00,0x32
-0x00,0x31
-0x00,0x30
-0x00,0x88
-0x00,0x87
-0x00,0x86
-0x00,0x85
-0x00,0x84
-0x00,0x45
-0x00,0x44
-0x00,0x43
-0x00,0x42
-0x00,0x41
 0x00,0x0A
-0xCC,0x13
-0xCC,0x14
-0xCC,0x15
-0xCC,0xA8
-0xCC,0xA9
-0xCC,0xAA
 </intermediate>
 
 <old>
+0xCC,0x14
+0xCC,0x13
 0xC0,0x2F
 0xC0,0x2B
 0xC0,0x30
@@ -133,51 +81,36 @@
 0x00,0x39
 0xC0,0x12
 0xC0,0x08
+0x00,0x16
 0x00,0x9C
 0x00,0x9D
 0x00,0x3C
 0x00,0x3D
 0x00,0x2F
 0x00,0x35
-0xC0,0x22
-0xC0,0x21
-0xC0,0x20
-0x00,0xA5
-0x00,0xA1
 0x00,0x6A
-0x00,0x69
-0x00,0x68
-0x00,0x37
-0x00,0x36
-0xC0,0x1F
-0xC0,0x1E
-0xC0,0x1D
-0x00,0xA4
-0x00,0xA0
-0x00,0x3F
-0x00,0x3E
 0x00,0x32
-0x00,0x31
-0x00,0x30
 0x00,0x0A
+0x00,0x9A
+0x00,0x99
+0xCC,0x15
+0xC0,0x77
+0xC0,0x73
+0x00,0xC4
+0x00,0xC3
 0x00,0x88
 0x00,0x87
-0x00,0x86
-0x00,0x85
+0x00,0xC0
 0x00,0x84
+0xC0,0x76
+0xC0,0x72
+0x00,0xBE
+0x00,0xBD
 0x00,0x45
 0x00,0x44
-0x00,0x43
-0x00,0x42
+0x00,0xBA
 0x00,0x41
-0xC0,0x1C
-0xC0,0x1B
-0xC0,0x1A
-0x00,0x10
-0x00,0x0D
-0xCC,0x13
-0xCC,0x14
-0xCC,0x15
+0x00,0x96
 0xCC,0xA8
 0xCC,0xA9
 0xCC,0xAA
