@@ -1,5 +1,9 @@
 2016-06-11  Marco Bellaccini <marco.bellaccini[at!]gmail.com>
 
+	* realigned Cipher Suites evaluations with Mozilla specs
+
+2016-06-11  Marco Bellaccini <marco.bellaccini[at!]gmail.com>
+
 	* improved ChaCha20-Poly1305 Cipher Suites support
 
 2015-10-09  Marco Bellaccini <marco.bellaccini[at!]gmail.com>
